<resources>
    <string name="app_name">To do list</string>
    <string name="hint_text">Enter a new item</string>

    <string name="label_name">Task Name</string>
    <string name="label_date">Date</string>
    <string name="label_priority">Priority</string>
    <string name="label_status">Status</string>
    <string name="label_note">Note</string>
    <string name="label_time">Time</string>

    <string name="edit_done">Done</string>

    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="status_array">
        <item>To do</item>
        <item>Doing</item>
        <item>Done</item>
    </string-array>

</resources>
